--- a/sdms-app/package.json
+++ b/sdms-app/package.json
@@ -4,13 +4,19 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@material-tailwind/react": "^2.1.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dayjs": "^1.11.10",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-brackets": "^0.4.7",
     "react-dom": "^18.2.0",
